<resources>
    <string name="app_name">T-A310 32/16</string>
    <string name="btn_mtd">方式</string>
    <string name="btn_range">范围</string>
    <string name="btn_adj">调节</string>
    <string name="btn_opt">操作</string>
    <string name="btn_file">文档</string>
    <string name="btn_setting">设置</string>
    <string name="btn_test">测试</string>
    <string name="btn_tdr">低压脉冲</string>
    <string name="btn_icm">脉冲电流 - 冲闪</string><!--脉冲电流-冲闪//GC20221011-->
    <string name="btn_icm_decay">脉冲电流 - 直闪</string>
    <string name="btn_sim">多次脉冲</string>
    <string name="btn_decay">衰减法</string>
    <string name="btn_250m">250m</string>
    <string name="btn_500m">500m</string>
    <string name="btn_1km">1km</string>
    <string name="btn_2km">2km</string>
    <string name="btn_4km">4km</string>
    <string name="btn_8km">8km</string>
    <string name="btn_16km">16km</string>
    <string name="btn_32km">32km</string>
    <string name="btn_64km">64km</string>
    <string name="btn_250m_to_ft">820ft</string>
    <string name="btn_500m_to_ft">1640ft</string>
    <string name="btn_1km_to_yingli">3280ft</string>
    <string name="btn_2km_to_yingli">1mi</string>
    <string name="btn_4km_to_yingli">2mi</string>
    <string name="btn_8km_to_yingli">4mi</string>
    <string name="btn_16km_to_yingli">9mi</string>
    <string name="btn_32km_to_yingli">19mi</string>
    <string name="btn_64km_to_yingli">39mi</string>
    <string name="btn_gain_plus">增益+</string>
    <string name="btn_gain_minus">增益-</string>
    <string name="btn_balance_plus">平衡+</string>
    <string name="btn_balance_minus">平衡-</string>
    <string name="btn_delay_plus">延时+</string>
    <string name="btn_delay_minus">延时-</string>
    <string name="btn_vel_plus">波速+</string>
    <string name="btn_vel_minus">波速-</string>
    <string name="btn_zoom_in">放大</string>
    <string name="btn_zoom_out">缩小</string>
    <string name="btn_res">还原</string>
    <string name="btn_memory">记忆</string>
    <string name="btn_compare">比较</string>
    <string name="btn_save">保存</string>
    <string name="btn_browse">浏览</string>
    <string name="btn_display">显示</string>
    <string name="btn_search">查找</string>
    <string name="btn_dele">删除</string>
    <string name="btn_zero">光标零点</string>
    <string name="btn_lang">语言切换</string>
    <string name="btn_pulse">波宽度</string>
    <drawable name="clr_normal">#FF303F9F</drawable>
    <drawable name="clr_pressed">#9501f9</drawable>
    <string name="title_activity_base">BaseActivity</string>
    <string name="fault_distance">故障距离</string>
    <string name="btn_cursor">光标</string>

    <string name="tv_mode">方式:</string>
    <string name="tv_range">范围:</string>
    <string name="tv_gain">增益:</string>
    <string name="tv_vel">波速:</string>
    <string name="tv_balance">平衡:</string>
    <string name="tv_density">比例:</string>
    <string name="tv_delay">延时:</string>
    <string name="wave_number">波形序号：</string>
    <string name="wave_one">1</string>
    <string name="wave_two">2</string>
    <string name="wave_three">3</string>
    <string name="wave_four">4</string>
    <string name="wave_five">5</string>
    <string name="wave_six">6</string>
    <string name="wave_seven">7</string>
    <string name="wave_eight">8</string>

    <string name="btn_cancel">取消测试</string>
    <string name="wait_trigger">等待触发…</string>
    <string name="wait_trigger2">请调节电压！</string><!--GC20221102-->
    <string name="receive_data">正在接收数据…</string>
    <string name="connecting_wifi">等待WiFi连接…</string>
    <string name="connecting_hw">等待设备连接…</string>
    <string name="You_have_no_memory_data_can_not_compare">你还没有记忆数据，无法比较</string>
    <string name="You_can_not_compare">方式或范围不同，无法比较</string>
    <string name="btn_wave_previous">波形上翻</string>
    <string name="btn_wave_next">波形下翻</string>
    <string name="tv_testdate">"测试日期："</string>
    <string name="tv_testtime">"测试时间："</string>
    <string name="tv_testmode">"测试方式："</string>
    <string name="tv_testrange">"测试范围："</string>
    <string name="tv_testphase">"测试相别："</string>
    <string name="tv_testlocation">"测试地点："</string>
    <string name="tv_testline">"测试线路："</string>
    <string name="btn_Confirm">确定</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="phaseA">A相</string>
    <string name="phaseB">B相</string>
    <string name="phaseC">C相</string>
    <string name="btn_view">查看</string>
    <string name="title_date">日期</string>
    <string name="title_time">时间</string>
    <string name="title_mode">方式</string>
    <string name="title_range">范围</string>
    <string name="btn_inductor_plus">电感+</string>
    <string name="btn_inductor_minus">电感-</string>
    <string name="tv_inductor">电感:</string>
    <string name="gain_too_high">增益过大</string>
    <string name="gain_too_low">增益过小</string>
    <string name="break_down">击穿！</string>
    <string name="not_break_down">未击穿！</string>
    <string name="auto_fault_distance">自动测距：</string>
    <string name="cursor_zero_set_success">光标零点设置成功！</string>
    <string name="connect_success">T-A310连接成功！</string>
    <string name="connect_failed">T-A310已断开！请检查设备WiFi。</string>
    <string name="communication_failed">通信失败，请检查网络后重试</string>

    <!-- 新的资源 -->
    <string name="cable_vop">波速度：</string>
    <string name="vop">波速度：</string>
    <string name="tv_cable_id">线缆编号：</string>
    <string name="test_lead">测试缆：</string>
    <string name="length">长度：</string>
    <string name="unit">单位：</string>
    <string name="record">记录</string>
    <string name="vop_plus">波速度+</string>
    <string name="vop_min">波速度-</string>
    <string name="btn_both">Both</string>
    <string name="operator"> 测试人员：</string>
    <string name="select_change">选择您需要的语言</string>
    <string name="no_records">暂无记录</string>
    <string name="zh">中文</string>
    <string name="en">英文</string>
    <string name="cable_id">线缆编号：</string>
    <string name="date_text">日&#12288;&#12288;期：</string>
    <string name="mode_text">方&#12288;&#12288;式：</string>
    <string name="range_text">范&#12288;&#12288;围：</string>
    <string name="cable_length">电缆长度：</string>
    <string name="fault_location_text">故障距离：</string>
    <string name="phase_text">相&#12288;&#12288;别：</string>
    <string name="tv_tester">测试人员：</string>
    <string name="test_site_text">测试地点：</string>
    <string name="main_notice">默认测试范围是%1$s。 输入电缆长度，可自动确定范围。设置参数后选择测试方式</string>
    <string name="save_success">保存成功</string>
    <string name="save_success_1">已保存</string>
    <string name="distance">距离</string>
    <string name="mi">m</string>
    <string name="mius">m/us</string>
    <string name="ns">ns</string>
    <string name="ftus">ft/us</string>
    <string name="ft">ft</string>
    <string name="km">km</string>
    <string name="yingli">mi</string>
    <string name="update_version">有新版本,点击立即更新</string>
    <string name="no_load_url">没有可用于下载的地址</string>
    <string name="downloading">正在下载…</string>
    <string name="check_update">正在检测新版本信息…</string>
    <string name="has_new_version">当前已是最新版本</string>
    <string name="disconnect">T-A310连接异常!</string>
    <string name="ask_cancel">退出前请点击取消测试按钮。</string>
    <string name="update_now">现在更新</string>
    <string name="update_later">稍后更新</string>
    <string name="maxpulsewidth">脉宽最大值为7000。</string>
    <string name="test_on_no_connect">无法与设备通信！</string>
    <!--新增EnNuo-->
    <string name="selectmode_text">模式</string>
    <string name="selectdatestring">日期</string>
    <string name="btn_date_back">返回</string>
    <string name="btn_date_ensure">确认</string>
    <string name="btn_date_clear">清空</string>
    <string name="date_year">年</string>
    <string name="date_month">月</string>
    <string name="date_day">日</string>

    <!--新增GC-->
    <string name="btn_next">下一页</string>
    <string name="btn_previous">上一页</string>
    <string name="safe_guide">安全指导</string>
    <string name="operation_guide">操作指导</string>
    <string name="button_instruction">按钮说明</string>
    <string name="back">返&#12288;&#12288;回</string>
    <string name="englishSpace">&#160;</string>
    <string name="chineseSpace">&#12288;</string>
    <string name="testAgain">请再次测试!</string>
    <string name="company_name">山东科汇电力自动化股份有限公司</string>
    <string name="v_name">V3.0.7</string>

    <string name="working_mode">工作方式：</string>
    <string name="DC">直流</string>
    <string name="PULSE">单次</string>
    <string name="CYCLIC">周期</string>
    <string name="TIME">周期：</string> <!--缩短//GC20230222--> <!--//GC20220928-->
    <string name="PULSE2">放电测试</string>
    <string name="HVINDICATOR">电容电压</string>    <!--//GC20220928-->
    <string name="set_voltage">设定电压：</string>
    <string name="test_method">测试方法：</string>
    <string name="grounding_alarm">接地报警：</string>
    <string name="voltage">电压/kV</string>
    <string name="time">时间/s</string>
    <string name="Gear1">16kV</string>
    <string name="Gear2">32kV</string>   <!--GC20211227-->
    <!--<string name="Gear1">4kV</string>
    <string name="Gear2">8kV</string>-->
    <string name="hv_confirm">电压确认</string>
    <string name="hv_Breakdown_confirm">寻找击穿电压</string> <!--//GC20231009-->
    <string name="Breakdown_voltage">击穿电压</string> <!--//GC20231009-->
    <string name="no_Breakdown_voltage">未找到击穿电压</string> <!--//GC20231009-->
    <string name="quit">退出</string>
    <string name="hv_toast">电压已确认，等待升压......</string>
    <string name="hv_toast2">设定电压值最小为0kV！</string>
    <string name="hv_toast3">设定电压值最大为16kV！</string>
    <string name="hv_toast4">设定电压值最大为32kV！</string>    <!--GC20211227-->
    <string name="hv_warning_note">接地正常</string>
    <string name="hv_warning_note2">接地报警</string>
    <string name="hv_gear_note">电压档位正常</string>
    <string name="hv_gear_note2">电压档位故障</string>
    <string name="hv_working_mode_note">工作方式正常</string>
    <string name="hv_working_mode_note2">工作方式故障</string>
    <string name="hv_capacity_note">电容无残压</string>
    <string name="hv_capacity_note2">电容有残压</string>
    <string name="hv_ignition_coil_note">高压包正常</string>
    <string name="hv_ignition_coil_note2">高压包故障</string>
    <string name="enter_test">测&#8195;&#8195;距</string>
    <string name="switching">正在转换测试方式</string>
    <string name="switching_success">测试方式转换成功！</string>
    <string name="switching2">正在转换电压档位</string>
    <string name="switching_gear_success">电压档位转换成功！</string>
    <string name="ensure_HV">放电电压为：32kV，请确认</string>
    <string name="switch_on_note">正在检查设备是否合闸</string>
    <string name="switch_on_note2">设备已合闸，请点击下一步！</string>
    <string name="switch_on_note3">设备未合闸，请先合闸！</string>
    <string name="warn_note">请检查保护地和辅助地接线！</string><!--//GC20221206-->
    <string name="btn_ensure">放电</string>
    <string name="btn_yes">下一步</string>
    <string name="btn_no">返回</string><!--//GC20230222-->
    <string name="danger">高压危险！测试前请务必可靠连接保护地</string>
    <string name="isSetVoltageChanged">设定电压变化，请先点击“电压确认”按钮！</string>
    <string name="time_toast1">放电周期最小为4s！</string>
    <string name="time_toast2">放电周期最大为12s！</string>
    <string name="HVINDICATOR2">电容电压：</string>    <!--GC20220928-->
    <string name="offline">离线使用</string><!--//GC20231111-->

</resources>
