<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dp_5"
    android:orientation="vertical"><!--整体布局修改//GC20220812-->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_5"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center">

        <CheckBox
            android:id="@+id/cb_test_lead1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_8"
            android:background="@null"
            android:button="@drawable/bg_test_lead_selector" />

        <TextView
            android:id="@+id/tv_cable_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_lead"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_10" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center">

        <TextView
            android:id="@+id/tv_cable_lengtn_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/length"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_10" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_5"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center">

        <EditText
            android:id="@+id/et_pulse_length_id"
            android:layout_width="@dimen/dp_39"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:inputType="number"
            android:minWidth="@dimen/dp_80"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_10" />

        <TextView
            android:id="@+id/tv_cable_vop_unit2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mi"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_10" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_5"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center">

        <TextView
            android:id="@+id/tv_cable_vop_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vop"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_10" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_5"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center">

        <EditText
            android:id="@+id/et_pulse_vop_id"
            android:layout_width="@dimen/dp_34"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:inputType="number"
            android:minWidth="@dimen/dp_80"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_10" />

        <TextView
            android:id="@+id/tv_cable_vop_unit1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mius"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_10" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        android:layout_weight="1"
        android:gravity="center">

        <ImageView
            android:id="@+id/tv_lead_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_4"
            android:layout_marginBottom="@dimen/dp_4"
            android:gravity="center"
            android:src="@drawable/bg_save_selector" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_lead_close"
            android:layout_width="@dimen/dp_16"
            android:layout_height="@dimen/dp_16"
            android:layout_gravity="end"
            android:src="@drawable/bg_dialog_close" />
    </LinearLayout>
</LinearLayout>
