<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <DatePicker
        android:id="@+id/datePickerView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:calendarTextColor="@color/blue_303f9f"
        android:calendarViewShown="true"
        android:datePickerMode="spinner"
        android:headerYearTextAppearance="@color/blue_303f9f"
        android:spinnersShown="false"
        android:yearListItemTextAppearance="@color/blue_303f9f" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@android:color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/btn_date_back"
            android:textColor="@color/blue_0a9bbe" />

        <View
            android:id="@+id/splitLineV"
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@android:color/black"
            android:visibility="gone" />

        <TextView
            android:id="@+id/ensure"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/btn_date_ensure"
            android:textColor="@color/blue_0a9bbe"
            android:visibility="gone" />

        <View
            android:id="@+id/splitLineV1"
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@android:color/black" />

        <TextView
            android:id="@+id/dateclear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/btn_date_clear"
            android:textColor="@color/blue_0a9bbe" />
    </LinearLayout>

</LinearLayout>