<?xml version="1.0" encoding="utf-8"?>
<androidx.percentlayout.widget.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="#00000000"
    android:orientation="vertical">

    <androidx.percentlayout.widget.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="@dimen/dp_25"
            android:layout_height="@dimen/dp_25"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/dp_10"
            android:src="@drawable/bg_dialog_close_big" />

        <androidx.percentlayout.widget.PercentRelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_language_change"
            app:layout_marginLeftPercent="2.6%"
            app:layout_marginRightPercent="2.6%">

            <LinearLayout
                android:id="@+id/rl_info"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/dp_25"
                android:layout_marginBottom="@dimen/dp_25"
                android:layout_marginStart="@dimen/dp_25"
                android:layout_marginEnd="@dimen/dp_25"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_change"
                    android:textSize="@dimen/sp_15"
                    android:textColor="@color/colorPrimary"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_25"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_zh"
                        android:layout_width="@dimen/dp_60"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/dp_5"
                        android:paddingBottom="@dimen/dp_5"
                        android:layout_marginEnd="@dimen/dp_20"
                        android:background="@drawable/shape_solide_0ff6ff"
                        android:textColor="@color/colorPrimary"
                        android:gravity="center"
                        android:text="@string/zh"
                        android:textSize="@dimen/sp_12"/>

                    <TextView
                        android:id="@+id/tv_en"
                        android:layout_width="@dimen/dp_60"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/dp_5"
                        android:paddingBottom="@dimen/dp_5"
                        android:layout_marginStart="@dimen/dp_20"
                        android:background="@drawable/shape_solide_0ff6ff"
                        android:textColor="@color/colorPrimary"
                        android:gravity="center"
                        android:text="@string/en"
                        android:textSize="@dimen/sp_12"/>
                </LinearLayout>

            </LinearLayout>

        </androidx.percentlayout.widget.PercentRelativeLayout>

    </androidx.percentlayout.widget.PercentRelativeLayout>

</androidx.percentlayout.widget.PercentRelativeLayout>
